src/styles.css
* {
  box-sizing: border-box;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #272727;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
}

#root {
  overflow: auto;
}

body {
  position: fixed;
  overflow: hidden;
  overscroll-behavior-y: none;
  font-family: helvetica neue, helvetica, arial, sans-serif;
  color: black;
  -webkit-font-smoothing: antialiased;
}

.uiLayer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 99999999999999999999999;

  div.titre {
    position: absolute;
    z-index: 1000;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    text-align: end;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 4em;

    .startButton {
      cursor: pointer;
      border:none;
      background-color: transparent;
      background-position: center;
      background-image: url('/start_off.png');
      display: flex;
      flex-direction: column;
      justify-content: center;
      font-size: 64px;
      width: 434px;
      height: 131px;
    }
    .startButton:hover {
      background-image: url('/start_on.png');
      background-size: cover;
      background-repeat: no-repeat;
      color: white;
    }

  }

  div.sound {
    cursor: pointer;
    margin: 2%;
    position: absolute;
    display: flex;
    bottom: 0;
    right: 0;

    img{
      padding: 5px;
      max-width: 50px;
      max-height: 50px;
    }
  }
}


/* Apparition douce */
.fade-in {
  opacity: 0;
  animation: fadeIn 0.5s forwards;
}

/* Disparition douce */
.fade-out {
  opacity: 1;
  animation: fadeOut 0.5s forwards;
}

/* Animation keyframes */
@keyframes fadeOut {
  to {
    opacity: 0;
    pointer-events: none;
  }
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

